--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 	
-		
+
 	<div class = "row">
 		<div class="col-md-3 col-md-offset-1 well">
 			<h3>Quiz Competetion</h3>
 			<h5>April-01-2016</h5>
+			<h3>Quiz Master</h3>
 		</div>
 		<div class="col-md-3 well">
 			<h3>Questions</h3>
