--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div class="col-md-3 col-md-offset-1 well">
 			<h3>Quiz Competetion</h3>
 			<h5>April-01-2016</h5>
+			<h5>Quiz Master</h5>
 		</div>
 		<div class="col-md-3 well">
 			<h3>Questions</h3>
